# yomichan-forvo-server

./: .gitignore  Dockerfile  README.org  __init__.py  compose.yaml  pyproject.toml
src/yomichan_forvo_server/: main.py
