[project]
name = "yomichan-forvo-server"
version = "0.1.0"
description = "An audio server for yomichan that scrapes forvo for audio files"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.13.0",
    "lxml>=6.0.0",
]

[project.scripts]
server = "yomichan_forvo_server.main:run"

[tool.setuptools]
package-dir = {"" = "src"}
